--- a/newtab.html
+++ b/newtab.html
@@ -3,15 +3,11 @@
 <head>
     <title>new tab</title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
 <body>
     <div class="app">
-        <!-- search -->
-        <input id="search-box" type="text">
-        <img id="search-img" src="search.png" />
-        <div id="search-content"></div>
         <!-- main -->
         <div id="content"></div>
     </div>
